# crackle

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  automated_test.py  crackcode.py  macbuild.zsh  make_examples.py  pin_method.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  test.yml
benchmarks/: README.md  perf.py  size.py
crackle/: __init__.py  array.py  ccl.py  codec.py  crackcode.py  decoder.py  encoder.py  header.py  headers.py  lib.py  operations.py  pins.py  search.py  util.py
crackle_cli/: cli.py
cracklepy/: __init__.py  ccl.py  decoder.py  encoder.py  lib.py  pins.py  util.py
src/: cc3d.hpp  crackcode.hpp  crackcodes.hpp  crackle.hpp  crc.hpp  dual_graph.hpp  fastcrackle.cpp  header.hpp  labels.hpp  lib.hpp  markov.hpp  operations.hpp  pairing_heap.hpp  pins.hpp  robin_hood.hpp  threadpool.hpp
wasm/: Dockerfile  build.sh  build_wasm.sh  crackle_wasm.cc  index.ts  libcrackle.wasm
